Refactor SonarQube integration in build configuration
- Moved SonarQube plugin application to build.gradle for better management.
- Updated .speakeasy/gen.yaml to include SonarQube plugin in additionalPlugins.
- Removed direct SonarQube configuration from build-extras.gradle, noting the new plugin management approach.

--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -30,7 +30,8 @@ generation:
 java:
   version: 0.0.3
   additionalDependencies: []
-  additionalPlugins: []
+  additionalPlugins:
+    - id 'org.sonarqube' version '4.4.1.3373'
   artifactID: novu-java
   asyncMode: enabled
   baseErrorName: NovuException
