--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id "io.spring.dependency-management" version "1.1.6" apply false
+    id 'org.sonarqube' version '4.4.1.3373'
 }
 
 compileJava.options.encoding = "UTF-8"
