--- a/settings.gradle
+++ b/settings.gradle
@@ -7,13 +7,13 @@
  * in the user manual at https://docs.gradle.org/7.5.1/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'openapi'
+rootProject.name = 'novu-java'
 
-include 'openapi-spring-boot-autoconfigure'
-include 'openapi-spring-boot-starter'
+include 'novu-java-spring-boot-autoconfigure'
+include 'novu-java-spring-boot-starter'
 
-project(':openapi-spring-boot-autoconfigure').projectDir = file('spring/openapi-spring-boot-autoconfigure')
-project(':openapi-spring-boot-starter').projectDir = file('spring/openapi-spring-boot-starter')
+project(':novu-java-spring-boot-autoconfigure').projectDir = file('spring/novu-java-spring-boot-autoconfigure')
+project(':novu-java-spring-boot-starter').projectDir = file('spring/novu-java-spring-boot-starter')
 
 // Apply additional settings if the file exists
 if (file('settings-extra.gradle').exists()) {
