--- a/spring/novu-java-spring-boot-starter/build.gradle
+++ b/spring/novu-java-spring-boot-starter/build.gradle
@@ -4,23 +4,23 @@ description = 'openapi Spring Boot Starter'
 ext {
     publishingConfig = [
         groupId: rootProject.group,
-        artifactId: 'openapi-spring-boot-starter',
+        artifactId: 'novu-java-spring-boot-starter',
         version: rootProject.version,
-        name: 'My Company Java SDK - Spring Boot Starter',
-        description: 'Spring Boot starter for the My Company Java SDK.',
+        name: 'Novu Java SDK - Spring Boot Starter',
+        description: 'Spring Boot starter for the Novu Java SDK.',
     ]
 }
 
 dependencies {
     api project(':')
-    api project(':openapi-spring-boot-autoconfigure')
+    api project(':novu-java-spring-boot-autoconfigure')
     api "org.springframework.boot:spring-boot-starter:${rootProject.springBootVersion}"
 }
 
 jar {
     dependsOn 'generatePomFileForMavenPublication'
-    archiveBaseName = 'openapi-spring-boot-starter'
-    into("META-INF/maven/co.novu/openapi-spring-boot-starter") {
+    archiveBaseName = 'novu-java-spring-boot-starter'
+    into("META-INF/maven/co.novu/novu-java-spring-boot-starter") {
         from(layout.buildDirectory.file("pom.xml")) {
             // Only include if it exists to avoid build ordering issues
             duplicatesStrategy = DuplicatesStrategy.INCLUDE
